# git

./: .gitignore  CMakeLists.txt  README.md  SmartSiteFaceAttendance.pro
cmake/: copy_opencv_runtime.cmake
config/: device_config.json
docs/: PROJECT_SUMMARY.md  sqlite_schema.sql
models/: README.md
scripts/: download_models.ps1
src/: main.cpp
src/business/: AttendanceManager.cpp  AttendanceManager.h
src/camera/: CameraWorker.cpp  CameraWorker.h  FramePacket.h
src/comm/: CloudClient.cpp  CloudClient.h
src/domain/: AttendanceRecord.h  Person.h  RecognizedFaceRecord.h
src/hardware/: AccessController.cpp  AccessController.h
src/monitor/: SystemMonitor.cpp  SystemMonitor.h
src/storage/: DatabaseManager.cpp  DatabaseManager.h
src/ui/: MainWindow.cpp  MainWindow.h
src/utils/: MatImageConverter.cpp  MatImageConverter.h
src/vision/: FaceFeatureExtractor.cpp  FaceFeatureExtractor.h  FaceRecognizer.cpp  FaceRecognizer.h  FaceTypes.h  LivenessDetector.cpp  LivenessDetector.h
